# eacp

./: .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  DCOMP-PORT-STATUS.md  Dockerfile  Foo.h  README.md  compile_commands.json  foo.diff  justfile  pyrightconfig.json
Apps/: CMakeLists.txt
Apps/BasicHTTP/: Main.cpp
Apps/Camera/: CMakeLists.txt
Apps/Camera/CameraViewDemo/: CMakeLists.txt  Info.plist.in  Main.cpp
Apps/Camera/CaptureProbe/: CMakeLists.txt  Info.plist.in  Main.cpp
Apps/Camera/IpcCameraDemo/: CMakeLists.txt  Info.plist.in  Main.cpp
Apps/Console/: CMakeLists.txt
Apps/Console/Console/: CMakeLists.txt  Main.cpp
Apps/GPU/: CMakeLists.txt
Apps/GPU/Blending/: Main.cpp
Apps/GPU/Clipping/: CMakeLists.txt  Main.cpp
Apps/GPU/Compute/: CMakeLists.txt  Compute.hlsl  Compute.metal  Main.cpp
Apps/GPU/GlyphAtlas/: CMakeLists.txt  Main.cpp
Apps/GPU/Instancing/: CMakeLists.txt  Main.cpp
Apps/GPU/Lattice/: CMakeLists.txt  Main.cpp
Apps/GPU/Maze/: CMakeLists.txt  Main.cpp
Apps/GPU/Paths/: CMakeLists.txt  Main.cpp
Apps/GPU/RotatingTriangle/: CMakeLists.txt  Main.cpp
Apps/GPU/Sprites/: CMakeLists.txt  Main.cpp
Apps/GPU/Teapot/: CMakeLists.txt  Icon.icns  Main.cpp  Mat4.h  TeapotData.h
Apps/GPU/Texture/: CMakeLists.txt  Main.cpp
Apps/GPU/TextureAtlas/: CMakeLists.txt  Main.cpp
Apps/GPU/Triangle/: CMakeLists.txt  Main.cpp  Triangle.hlsl  Triangle.metal
Apps/GPU/TriangleGen/: CMakeLists.txt  Main.cpp
Apps/GPU/VideoRecorderGpu/: CMakeLists.txt  Main.cpp
Apps/Graphics/: CMakeLists.txt
Apps/Graphics/ComplexGUI/: CMakeLists.txt  TaskBoard.cpp
Apps/Graphics/CursorShapes/: CMakeLists.txt  Main.cpp
Apps/Graphics/EmbeddedViewDemo/: CMakeLists.txt  Main.cpp
Apps/Graphics/GUI/: CMakeLists.txt  Main.cpp
Apps/Graphics/IpcDemo/: CMakeLists.txt  Main.cpp
Apps/Graphics/KeyInspector/: CMakeLists.txt  Main.cpp
Apps/Graphics/MenuBarApp/: CMakeLists.txt  Main.cpp
Apps/Graphics/Todo/: CMakeLists.txt  Main.cpp
Apps/Graphics/TrayApp/: Api.h  CMakeLists.txt  Info.plist.in  Main.cpp  MakeASound.cmake  Types.h
Apps/Graphics/VideoRecorderDemo/: CMakeLists.txt  Main.cpp
Apps/HttpRpcDemo/: CMakeLists.txt  Main.cpp
Apps/HubApps/: CMakeLists.txt  GatingApi.h  Launcher.h  Protocol.h  Ui.h
Apps/HubApps/Hub/: CMakeLists.txt  Main.cpp
Apps/HubApps/Ipc/: CMakeLists.txt  NngRpc.cpp  NngRpc.h
Apps/HubApps/Rpc/: CMakeLists.txt  Discovery.cpp  GatingClient.cpp  GatingClient.h  GatingServer.cpp  GatingServer.h  Peer.cpp  Peer.h  RendezvousFile.cpp  RendezvousFile.h
Apps/HubApps/SecretPremiumApp/: CMakeLists.txt  Main.cpp
Apps/HubApps/Tests/: CMakeLists.txt  PeerContractTests.cpp  RpcContractTests.cpp
Apps/Mixed/: CMakeLists.txt
Apps/Mixed/LayeredViews/: CMakeLists.txt  Main.cpp
Apps/Mixed/MixedViews/: CMakeLists.txt  Info.plist.in  Main.cpp
Apps/Network/: CMakeLists.txt
Apps/Network/BasicHTTP/: CMakeLists.txt  Main.cpp
Apps/Network/HTTP/: CMakeLists.txt  Main.cpp
Apps/Network/HttpRpcDemo/: CMakeLists.txt  Schema.h  Server.cpp  client.ts  package.json  server.ts  (+1 more)
Apps/Plugins/: CMakeLists.txt
Apps/SVG/: CMakeLists.txt
Apps/Terminal/: CMakeLists.txt  README.md
Apps/WebView/: CMakeLists.txt
Apps/WebViewCamera/: Info.plist.in  Main.cpp
Apps/WebViewEmbed/: CMakeLists.txt  Commands.cpp  Main.cpp  Types.h
Apps/WebViewReactAnim/: Types.h
Apps/WebViewTodo/: Commands.cpp  Types.h
ExtraClangRules/: README.md  main.py  pyproject.toml
ExtraClangRules/nvim/: eacp-tidy.lua
ExtraClangRules/plugin/: CMakeLists.txt  EacpTidyChecks.cpp
Lib/eacp/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Camera/: CMakeLists.txt  Common.h  ComputeImageAreaTests.cpp  TestMain.cpp
Tests/Codegen/: CMakeLists.txt  InversionCodegenTests.cpp
Tests/Core/: AppAffordanceTests.cpp  AppTerminationHarness.mm  AppTerminationTests.cpp  AppTests.cpp  AsyncCoroutineTests.cpp  AsyncTests.cpp  CMakeLists.txt  ClipboardTests.cpp  Common.h  DynamicLibraryTestPlugin.cpp  DynamicLibraryTests.cpp  EventLoopTests.cpp  FilePathTests.cpp  FilePickerWindowsTests.cpp  FileTests.cpp  FilesTests.cpp  PluginObjectTests.cpp  ProcessTests.cpp  RangeTests.cpp  UtilsTests.cpp
Tests/GPU/: BackingScaleTests.cpp  CMakeLists.txt  Common.h  CoordinateSpaceTests.cpp  GPUSmokeTests.cpp  GPUSnapshotTests.cpp  ScissorTests.cpp  ShaderBlendTests.cpp  ShaderCodegenTests.cpp  TestMain.cpp  TextureInteropTests.mm  TextureRegionTests.cpp  TextureSamplingTests.cpp  TextureUpdateTests.cpp
Tests/GPUWidgets/: CMakeLists.txt  PathTests.cpp
Tests/Graphics/: CMakeLists.txt  ColorTests.cpp  Common.h  CompositionPixelTests-Windows.cpp  CursorTests-macOS.mm  CursorTests.cpp  ImageOpsTests.cpp  ImageRenderTests.cpp  ImageTests.cpp  KeyCodeTests.cpp  MenuCommandsTests.cpp  MenuTests-macOS.mm  MenuTests.cpp  MouseTrackingLifetimeTests.cpp  RectTests.cpp  RenderToImageTests.cpp  RoundedRectTests.cpp  ScrollWheelTests-macOS.mm  ScrollWheelTests.cpp  TestMain.cpp  ViewInputTests.cpp  WindowTests.cpp
Tests/IconPacker/: CMakeLists.txt  IconPackerTests.cpp
Tests/InterAppCommunication/: CMakeLists.txt  EndpointTests.cpp  PeerTests.cpp  PollingClientTests.cpp
Tests/Network/: CMakeLists.txt  Common.h  HttpDownloadProgressTests.cpp  HttpJsonTests.cpp  HttpParallelDownloadTests.cpp  HttpRequestTests.cpp  HttpRpcTests.cpp  HttpServerTests.cpp  IpcChannelHarness.cpp  IpcChannelTests.cpp  IpcLockHarness.cpp  IpcLockTests.cpp  IpcMessengerTests.cpp  IpcRpcTests.cpp  McpServerTests.cpp  TcpConnectionTests.cpp
Tests/SIMD/: CMakeLists.txt  SimdBench.cpp  SimdTests.cpp
Tests/SVG/: SVGImageTests.cpp
Tests/Text/: CMakeLists.txt  Common.h  GlyphAtlasTests.cpp  GlyphRasterizerTests.cpp  GlyphRendererTests.cpp  ShelfPackerTests.cpp  TextRenderingTests.cpp
Tests/WebView/: AsyncBridgeTests.cpp  CMakeLists.txt  CommandDispatchTests.cpp  Common.h  FileProviderTests.cpp  KeyForwardingTests-Windows.cpp  KeyForwardingTests.mm  OffscreenAnimationTests.cpp  StreamingPumpTests.cpp  StreamingRangeTests.cpp  WebViewAffordanceTests.cpp  WebViewCallTests.cpp  WindowControlTests.cpp  WindowDragTests.cpp
(+661 files in other folders)
