set(CMAKE_FOLDER Examples)

add_subdirectory(Console)
add_subdirectory(Network)

if ((APPLE OR WIN32) AND EACP_BUILD_GRAPHICS)
    add_subdirectory(Graphics)
    add_subdirectory(SVG)
    if (EACP_BUILD_WEBVIEW)
        add_subdirectory(WebView)
    endif ()
    if (APPLE OR WIN32)
        add_subdirectory(GPU)
        add_subdirectory(Camera)
    endif ()
    if (EACP_BUILD_WEBVIEW AND (APPLE OR WIN32))
        add_subdirectory(Mixed)
    endif ()
endif ()
