set(CMAKE_FOLDER Tests)

find_package(NanoTest REQUIRED)

add_subdirectory(Core)
add_subdirectory(SIMD)

if (APPLE)
    add_subdirectory(ObjC)
endif ()

add_subdirectory(Network)
add_subdirectory(InterAppCommunication)

if ((APPLE OR WIN32) AND EACP_BUILD_GRAPHICS)
    add_subdirectory(Graphics)
endif ()

if ((APPLE OR WIN32) AND EACP_BUILD_GRAPHICS AND NOT IOS)
    add_subdirectory(GPU)
    add_subdirectory(GPUWidgets)
    add_subdirectory(Camera)
endif ()

# Codegen tests exercise eacp's WebView events/hooks format registrations,
# so they only run on the platforms where the WebView library (and its
# eacp-webview-codegen object lib) are built.
if ((APPLE OR WIN32) AND EACP_BUILD_GRAPHICS AND EACP_BUILD_WEBVIEW)
    add_subdirectory(Codegen)
endif ()

# Pure-logic WebView tests (Range header resolution). Same platform gate as
# Codegen -- they link eacp-webview but never construct a WebView.
if ((APPLE OR WIN32) AND EACP_BUILD_GRAPHICS AND EACP_BUILD_WEBVIEW)
    add_subdirectory(WebView)
endif ()

