set(CMAKE_FOLDER Examples/GPU)

add_subdirectory(Triangle)
add_subdirectory(TriangleGen)
add_subdirectory(RotatingTriangle)
add_subdirectory(Teapot)
add_subdirectory(Compute)
add_subdirectory(Paths)
add_subdirectory(Texture)
add_subdirectory(Maze)
add_subdirectory(Sprites)
add_subdirectory(Blending)
add_subdirectory(Instancing)
