add_executable(HttpRpcServer Server.cpp)
target_link_libraries(HttpRpcServer PRIVATE eacp-network-rpc)
eacp_target_uses_schema(HttpRpcServer WebViewEmbedSchema HANDLERS)
set_default_target_setting(HttpRpcServer)

add_executable(HttpRpcClient Client.cpp)
target_link_libraries(HttpRpcClient PRIVATE eacp-network-rpc)
eacp_target_uses_schema(HttpRpcClient WebViewEmbedSchema)
set_default_target_setting(HttpRpcClient)
